--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.2"
+    "vue-router": "^3.5.2",
+    "vue-simple-spinner": "^1.2.10"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
