--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "core-js": "^3.6.5",
     "dotenv": "^10.0.0",
     "vue": "^2.6.14",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.5.2",
-    "vue-simple-spinner": "^1.2.10"
+    "vue-simple-spinner": "^1.2.10",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
